Fixed bug showing a horizontal scroll bar on main page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,6 +169,7 @@ html {
 html,
 body {
 	background: #1c1d26;
+	overflow-x: hidden;
 }
 
 body.is-preload *,
